tests/spec/pass/loop_labels.aja
outer: for i in range(3):
    for j in range(3):
        if i == 1 and j == 1:
            break outer
        print(i * 10 + j)

count = 0
again: for i in range(4):
    for j in range(3):
        if j == 1:
            continue again
        count++
print(count)
