tests/spec/fail/continue_unknown_label.aja
for i in range(2):
    continue no
